feat: v1.1.0 - 机制浏览器增强与UI一致性优化
主要改进:
- 统一图标系统：将27个机制分类的字母图标改为直观的Emoji图标
- 集成操作日志面板：在机制浏览器底部添加可折叠的OperationLogPanel
- 清理冗余配置：删除未使用的mechanism_file_mappings.yml
- 修复图标重复问题：DROP和INSTANCE不再使用相同的"D"图标

新功能:
- MechanismOverrideConfig：支持设计师手动覆盖机制分类
- MechanismOverrideEditorDialog：机制分类管理界面
- OperationLogPanel：统一的操作日志组件

文档:
- 添加机制分类系统相关文档
- 更新CLAUDE.md项目文档

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>